# Aura-Redemption

./: .gitignore  CMake.txt  CMakeLists.txt  Makefile  README.md
.cache/clangd/index/: Button.cpp.B5264426709AA4D7.idx  Button.h.BADE926BFC2192B7.idx  Game.cpp.601BB3EF1888C089.idx  Game.h.3BC592492EA82C40.idx  Player.cpp.F3C0ED9765EC5ED5.idx  Player.h.8B36B0B62A6F1B3E.idx  ball.cpp.329F0E0B420156BE.idx  ball.h.008B79950C1BB99D.idx  main.cpp.B149D332B5470EC6.idx  raylib.h.1EAED1D4A4CB8BAB.idx
.github/workflows/: cmake-single-platform.yml
src/: Game.cpp  Game.h  Player.cpp  Player.h  ball.h  button.h  main.cpp  reference.txt
src/Button/: Button.cpp  Button.h
src/Game/: Game.cpp
src/Player/: Player.cpp  Player.h
src/ball/: ball.cpp
